--- a/system/Makefile
+++ b/system/Makefile
@@ -1,26 +1,41 @@
-# System Makefile for the kernel, 
-# it appends the systme object file folder
-# to the lnktree list of the make process. 
-# It compiles the files within this folder to 
-# the specified forrmat in CFLAGS, which was exported 
-# in the makefile above. Note that there may be folders
-# below which require seperate attributes. 
-CSOURCE:= ./*.c
-ASOURCE:= ./asm/*.asm 
-OUT:=./bin/
+# Makefile for the system directory, 
+# it adds all the relevant material to the 
+# srctree for building.  
+# After the subdirectory's make files have 
+# been called, this one simply exits, and 
+# returns to the makefile of the parent 
+# directory. 
 
-# After the list of c file and assembly files 
-# have been put into object files, the output folder 
-# needs to be added to the lnklist
-system: build
-	
-COBJ:= $(OUT)*.o 
+# C source files within the current directory
+CSRC := *.c 
+# ASM object files within the current directory
+# TODO: *.asm doesn't work for whatever god-aweful reason. 
+ASRC := core.asm irq.asm isrs.asm 
 
-# Build 
-build: 
-	mkdir -p $(OUT)
-	@echo $(COBJ)
-	@for file in $(CSOURCE) ; do \
-		$(CC) $(CFLAGS) -o $(OUT)/$${CSOURCE:%.c=%.o} $$file ; \
-	done
+# The system makefile tree, while you do have 
+# manually input the makefile directorys you want
+# to run, this allows for fairly modularized system 
+# building. 
+SYSTEMTREE := $(CURDIR)/asm/
 
+# Main function for the Makefile, simply runs
+# any of the system tree makefiles first 
+# then adds any directories to the srctree after it's 
+# finished. 
+#TODO: Add handler for SYSTEMTREE makefile calling
+system:
+	@mkdir -p $(OUTPUT)/system/
+	@mkdir -p $(OUTPUT)/system/asm
+	@echo $(ASRC)
+	@echo $(CSRC)
+# Since we are in a child of the parent makefile, 
+# we can't export an updated list of files to compile
+# back up. So we have to compile the files here, 
+# and leave it up to the main Makefile later. 
+	@for file in $(CSRC) ; do echo "Compiling "$$file"..." ; $(CC) $(CFLAGS) $$file -o $(OUTPUT)/system/$$file ; done
+	@for file in $(ASRC) ; do echo "Assembling "$$file".." ; $(AS) $(AFLAGS) $(CURDIR)/asm/$$file -o $(OUTPUT)/system/asm/$$file ; done
+# Because the for loop only lets you do simple commands
+# we have to rename the extension on the object files 
+# that were just created from .c and .asm to .o
+	@for file in $(OUTPUT)/system/ ; do rename .c .o $(OUTPUT)/system/* ; done
+	@for file in $(OUTPUT)/system/asm/ ; do rename .asm .o $(OUTPUT)/system/asm/* ; done
