--- a/system/Makefile
+++ b/system/Makefile
@@ -25,15 +25,12 @@ SYSTEMTREE := $(CURDIR)/asm/
 #TODO: Add handler for SYSTEMTREE makefile calling
 system:
 	@mkdir -p $(OUTPUT)/system/
-	@mkdir -p $(OUTPUT)/system/asm
-	@echo $(ASRC)
-	@echo $(CSRC)
 # Since we are in a child of the parent makefile, 
 # we can't export an updated list of files to compile
 # back up. So we have to compile the files here, 
 # and leave it up to the main Makefile later. 
 	@for file in $(CSRC) ; do echo "Compiling "$$file"..." ; $(CC) $(CFLAGS) $$file -o $(OUTPUT)/system/$$file ; done
-	@for file in $(ASRC) ; do echo "Assembling "$$file".." ; $(AS) $(AFLAGS) $(CURDIR)/asm/$$file -o $(OUTPUT)/system/asm/$$file ; done
+	@for file in $(ASRC) ; do echo "Assembling "$$file".." ; $(AS) $(AFLAGS) $(CURDIR)/asm/$$file -o $(OUTPUT)/system/$$file ; done
 # Because the for loop only lets you do simple commands
 # we have to rename the extension on the object files 
 # that were just created from .c and .asm to .o
