Redid makefiles to support the tree system better, updated terminus to a near working state, and have started work on standard libraries for things like strings.

--- a/app/Makefile
+++ b/app/Makefile
@@ -8,6 +8,9 @@
 # Current directory makefile file 
 # procession tree. 
 APPTREE := $(CURDIR)/terminus 
+OUTPUT :=$(OUTPUT)/app/
+export OUTPUT
 
 build: 
+	@mkdir $(OUTPUT)
 	@for dir in $(APPTREE) ; do $(MAKE) -C $$dir -s ; done
